--- a/wp-content/themes/duck-and-cover/assets/sass/site/primary/_blog-post-layout.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/site/primary/_blog-post-layout.scss
@@ -11,7 +11,7 @@
         padding-bottom: 10px;
     }
     .entry-footer {
-        border-bottom: 1px solid #000;
+        //border-bottom: 1px solid #000;
         padding: 20px 0 40px;
         .single & {
             margin-top: 0;
