--- a/wp-content/themes/duck-and-cover/assets/sass/site/primary/_comments.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/site/primary/_comments.scss
@@ -1,14 +1,14 @@
 /*Comment*/
 .comments-area {
-    background: #FFF;
-    border-top: 1px solid transparent;
+
     .heading {
         font-size: 24px;
         text-align: center;
         text-transform: uppercase;
     }
     .comment-list {
-        margin-bottom: 30px;
+        margin: 0 auto 30px auto;
+        max-width: 700px;
         > .comment {
             padding: 0 0 40px 0;
         }
@@ -34,7 +34,6 @@
                 }
 
                 p {
-                    margin-top: 14px;
                     margin-bottom: 0;
                     line-height: 2;
                 }
@@ -62,11 +61,12 @@
         }
         .metadata {
             padding-bottom: 13px;
-            border-bottom: 1px solid #EEE;
             .post-date {
                 font-size: 12px;
-                font-weight: 400 !important;
+                display: inline-block;
+                @extend .gibson-semibold;
                 text-transform: uppercase;
+                color: #ccc;
             }
         }
     }
@@ -74,6 +74,8 @@
     .comment-respond {
         padding: 0 0 40px;
         text-align: center;
+        margin: 0 auto;
+        max-width: 700px;
         .comment-reply-title {
             @extend %heading-style-3;
             margin-bottom: 37px;
@@ -110,24 +112,25 @@
                 padding-right: 15px;
             }
             label {
-                margin-bottom: 16px;
-                font-size: 13px;
+                margin-bottom: 0;
+                font-size: 12px;
                 text-transform: uppercase;
+                @extend .gibson-semibold;
             }
             input[type="text"] {
                 width: 100%;
                 margin-bottom: 12px;
                 border: 1px solid #000;
-                text-align: center;
             }
             textarea {
                 height: auto;
                 margin-bottom: 5px;
+                padding: 10px;
             }
             .form-submit {
                 text-align: center;
                 margin: 0;
-                padding: 20px 15px 0;
+                @extend .col-md-6;
                 .submit {
                     display: inline-block;
                     width: 100%;
