--- a/wp-content/themes/duck-and-cover/assets/sass/site/primary/_blog-post-layout.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/site/primary/_blog-post-layout.scss
@@ -7,8 +7,12 @@
     }
     .entry-meta {
         position: relative;
-        padding-top: 25px;
+        padding-top: 10px;
         padding-bottom: 10px;
+        time {
+          @extend .gibson-semibold;
+          color: #ccc;
+        }
     }
     .entry-footer {
         //border-bottom: 1px solid #000;
