--- a/wp-content/themes/duck-and-cover/assets/sass/site/primary/_blog-posts-and-pages.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/site/primary/_blog-posts-and-pages.scss
@@ -50,6 +50,10 @@
  */
 .post-img {
     display: block;
+    margin: 0 -15px;
+    @include media-breakpoint-up(sm) {
+      margin: 0;
+    }
 }
 
 /**
@@ -104,6 +108,7 @@
 .entry-content {
     p {
         line-height: 1.8;
+        font-size: 15px;
     }
     a {
         text-decoration: underline;
