--- a/wp-content/themes/duck-and-cover/assets/sass/navigation/_menu.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/navigation/_menu.scss
@@ -72,6 +72,7 @@ $sub-menu-padding-narrow: 25px;
         text-transform: uppercase;
         .menu-item-text {
           @extend .gibson-light;
+          font-size: 12px;
         }
       }
     }
