--- a/wp-content/themes/duck-and-cover/assets/sass/typography/_headings.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/typography/_headings.scss
@@ -14,7 +14,7 @@ h2 {
   text-transform: uppercase;
   @extend .gibson-semibold;
   font-size: 22px !important;
-  color: #4C4C4C !important;
+  color: #4C4C4C;
   @extend .gibson-semibold;
 }
 
