--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -1,3 +1,23 @@
+#sticky-promo-cta {
+  position: fixed;
+  top: 57%;
+  right: -30px;
+  font-size: 14px;
+  -webkit-transform: rotate(90deg) translateX(-50%);
+  -moz-transform: rotate(90deg) translateX(-50%);
+  -o-transform: rotate(90deg) translateX(-50%);
+  transform: rotate(90deg) translateX(-50%);
+  color: #d8120f;
+  @extend .gibson-semibold;
+  z-index: 999;
+  text-transform: uppercase;
+  opacity: 0;
+  transition: all .2s ease;
+  &:hover {
+    opacity: 1;
+  }
+}
+
 #duck-front-page {
 
   .hero-slider {
