--- a/wp-content/themes/duck-and-cover/assets/sass/vc_elements/_vc-custom-heading.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/vc_elements/_vc-custom-heading.scss
@@ -5,6 +5,7 @@
         position: relative;
         &:before,
         &:after {
+          display: none; // Hide all these shapes
             content: "";
             position: absolute;
             top: 50%;
