--- a/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
@@ -6,6 +6,9 @@
   padding: 80px 0;
   .footer-inner {
     padding: 0 20px;
+    .col-xs-12 {
+      margin-bottom: 20px;
+    }
   }
   .menu {
     margin-top: 8px;
