--- a/wp-content/themes/duck-and-cover/assets/sass/layout/_boxed.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/layout/_boxed.scss
@@ -6,7 +6,8 @@
 }
 
 .main-content {
-  @include media-breakpoint-up(md) {
+  padding-top: 77px;
+  @include media-breakpoint-up(sm) {
     padding-top: 71px; // allow for fixed header
   }
 }
