--- a/wp-content/themes/duck-and-cover/assets/sass/navigation/_menu.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/navigation/_menu.scss
@@ -478,7 +478,7 @@ $sub-menu-padding-narrow: 25px;
         width: 0;
         position: absolute;
         left: 50%;
-        bottom: -4px;
+        bottom: 0;
         opacity: 0;
         transition: all 0.2s;
         border-bottom: 4px solid rgba(216, 18, 15, .8);
