--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product.scss
@@ -241,6 +241,9 @@
     .price {
         display: block;
         padding-top: 5px;
+        span {
+          @extend .gibson-semibold;
+        }
         del {
             color: #878787;
             font-size: 12px;
